--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <h1>Drawing Program</h1>
-
+    <div class="controls">
+        <input class="amount" type="number" value="16">
+        <input class="color" value="#a52a2a" type="color">
+        <button class="submit" type="submit">Submit</button>
+    </div>
+    <div class="container drawpad"></div>
     <script defer src="script.js"></script>
 </body>
 </html>
