Add Coloring on the grid, change background color of target box on hover
feature: color drawing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Drawing Program</h1>
     <div class="controls">
         <input class="amount" type="number" value="16">
-        <input class="color" value="#a52a2a" type="color">
+        <input class="color" value="#ffffff" type="color">
         <button class="submit" type="submit">Submit</button>
     </div>
     <div class="container drawpad"></div>
