Style the webpage, align to center, include footer. change text of header. To make the app look good

--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+HU:wght@100..400&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Drawing Program</h1>
-    <div class="controls">
-        <input class="amount" type="number" value="16">
-        <input class="color" value="#ffffff" type="color">
-        <button class="submit" type="submit">Submit</button>
-    </div>
-    <div class="container drawpad"></div>
+    <main>
+        <h1>I'm a Sketch Program</h1>
+        <div class="controls">
+            <input class="amount" type="number" value="16">
+            <input class="color" value="#ffffff" type="color">
+            <button class="submit" type="submit">Make Canvas</button>
+        </div>
+        <div class="container drawpad"></div>
+    </main>
+    <footer>Copyright &copy; Bro Creation</footer>
     <script defer src="script.js"></script>
 </body>
 </html>
