Add toggle on rgb button to paint with randomly generated colors when toggled. Feature: raindow colors

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <input class="amount" type="number" value="16">
             <input class="color" value="#ffffff" type="color">
             <button class="submit" type="submit">Make Canvas</button>
+            <button class="toggleRgb">RGB</button>
         </div>
         <div class="container drawpad"></div>
     </main>
